# eforce-site

docs/: ARCHITECTURE.md  PROMPT-DESIGN-SYSTEM.md
docs/superpowers/plans/: 2026-03-22-eforce-porsche-redesign.md  2026-03-23-emailcli.md
docs/superpowers/specs/: 2026-03-22-eforce-porsche-redesign-design.md  2026-03-23-emailcli-design.md
eforce-site/: .gitattributes  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
eforce-site/content/dados/: marcas-banidas.txt  marcas-permitidas.txt
eforce-site/docs/: BLOG-DEPLOY-HANDOFF.md  BLOG-ROTINA.md
eforce-site/scripts/: blog-template.mjs  convert-to-webp.mjs  gera-blog.mjs  lib-posts.mjs  valida-post.mjs  valida-post.test.mjs  valida-todos-posts.mjs
eforce-site/src/: App.tsx  i18n.ts  index.css  main.tsx
eforce-site/src/context/: TransitionContext.tsx
eforce-site/src/data/: products-translations.ts  products.ts
eforce-site/src/hooks/: useDevicePerf.ts  useScrollReveal.ts  useTranslatedProduct.ts
eforce-site/src/pages/: DealersPage.tsx  HomePage.tsx  LinePage.tsx  NewsPage.tsx  NotFoundPage.tsx  ProductDetailPage.tsx  StoryPage.tsx  (+2 more)
emailcli/: pyproject.toml
emailcli/src/emailcli/: __init__.py  cli.py  config.py  db.py  mcp_server.py
emailcli/src/emailcli/actions/: cataloger.py  cleaner.py  organizer.py
emailcli/src/emailcli/classifier/: llm.py  rules.py
emailcli/src/emailcli/providers/: base.py  gmail.py  icloud.py
emailcli/tests/: conftest.py  test_actions.py  test_db.py  test_gmail.py  test_icloud.py  test_integration.py  test_llm.py  test_mcp_server.py  test_rules.py
(+75 files in other folders)
