[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emailcli"
version = "0.1.0"
description = "CLI email cleaner and cataloger with MCP server"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "keyring>=24.0.0",
    "ollama>=0.4.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
emailcli = "emailcli.cli:app"
emailcli-mcp = "emailcli.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/emailcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
